testsuite/tests/typecheck/should_fail/tcfail183.stderr

tcfail183.hs:5:30: error: [GHC-25955]
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Use ExplicitForAll
      to enable syntax: forall <tvs>. <type>
